src/Compiler/KodoGrammarParser.java
package Compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KodoGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		While=1, If=2, Else=3, Elseif=4, End=5, Display=6, Number=7, Binary=8, 
		String=9, Equal=10, Assign=11, Addition=12, Substraction=13, Multiplication=14, 
		Division=15, Modulus=16, GreaterThan=17, LessThan=18, GTEqual=19, LTEqual=20, 
		NEqual=21, Not=22, And=23, Or=24, True=25, False=26, Variable=27, Word=28, 
		Comment=29, Whitespace=30, Integer=31;
	public static final int
		RULE_entryPoint = 0, RULE_program = 1, RULE_statement = 2, RULE_assignment = 3, 
		RULE_display = 4, RULE_variableDeclare = 5, RULE_whileblockstatement = 6, 
		RULE_ifblockstatement = 7, RULE_elseifstatement = 8, RULE_elsestatement = 9, 
		RULE_ifstatement = 10, RULE_expr = 11, RULE_binary = 12, RULE_integer = 13, 
		RULE_string = 14;
	public static final String[] ruleNames = {
		"entryPoint", "program", "statement", "assignment", "display", "variableDeclare", 
		"whileblockstatement", "ifblockstatement", "elseifstatement", "elsestatement", 
		"ifstatement", "expr", "binary", "integer", "string"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'While'", "'If'", "'Else'", "'ElseIf'", "'End'", "'Display'", "'Number'", 
		"'Binary'", "'String'", "'=='", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'>'", "'<'", "'>='", "'<='", "'!='", "'!'", "'&'", "'|'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "While", "If", "Else", "Elseif", "End", "Display", "Number", "Binary", 
		"String", "Equal", "Assign", "Addition", "Substraction", "Multiplication", 
		"Division", "Modulus", "GreaterThan", "LessThan", "GTEqual", "LTEqual", 
		"NEqual", "Not", "And", "Or", "True", "False", "Variable", "Word", "Comment", 
		"Whitespace", "Integer"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KodoGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KodoGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EntryPointContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KodoGrammarParser.EOF, 0); }
		public EntryPointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entryPoint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterEntryPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitEntryPoint(this);
		}
	}

	public final EntryPointContext entryPoint() throws RecognitionException {
		EntryPointContext _localctx = new EntryPointContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entryPoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			program();
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << While) | (1L << If) | (1L << Display) | (1L << Number) | (1L << Binary) | (1L << String) | (1L << Variable))) != 0)) {
				{
				{
				setState(33);
				statement();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VariableDeclareContext variableDeclare() {
			return getRuleContext(VariableDeclareContext.class,0);
		}
		public DisplayContext display() {
			return getRuleContext(DisplayContext.class,0);
		}
		public WhileblockstatementContext whileblockstatement() {
			return getRuleContext(WhileblockstatementContext.class,0);
		}
		public IfblockstatementContext ifblockstatement() {
			return getRuleContext(IfblockstatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Variable:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				assignment();
				}
				break;
			case Number:
			case Binary:
			case String:
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				variableDeclare();
				}
				break;
			case Display:
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				display();
				}
				break;
			case While:
				enterOuterAlt(_localctx, 4);
				{
				setState(42);
				whileblockstatement();
				}
				break;
			case If:
				enterOuterAlt(_localctx, 5);
				{
				setState(43);
				ifblockstatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode Variable() { return getToken(KodoGrammarParser.Variable, 0); }
		public TerminalNode Assign() { return getToken(KodoGrammarParser.Assign, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(Variable);
			setState(47);
			match(Assign);
			setState(48);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisplayContext extends ParserRuleContext {
		public TerminalNode Display() { return getToken(KodoGrammarParser.Display, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DisplayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_display; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterDisplay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitDisplay(this);
		}
	}

	public final DisplayContext display() throws RecognitionException {
		DisplayContext _localctx = new DisplayContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_display);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(Display);
			setState(51);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclareContext extends ParserRuleContext {
		public VariableDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclare; }
	 
		public VariableDeclareContext() { }
		public void copyFrom(VariableDeclareContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BinvariableContext extends VariableDeclareContext {
		public TerminalNode Binary() { return getToken(KodoGrammarParser.Binary, 0); }
		public TerminalNode Variable() { return getToken(KodoGrammarParser.Variable, 0); }
		public BinvariableContext(VariableDeclareContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterBinvariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitBinvariable(this);
		}
	}
	public static class StrvariableContext extends VariableDeclareContext {
		public TerminalNode String() { return getToken(KodoGrammarParser.String, 0); }
		public TerminalNode Variable() { return getToken(KodoGrammarParser.Variable, 0); }
		public StrvariableContext(VariableDeclareContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterStrvariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitStrvariable(this);
		}
	}
	public static class NumvariableContext extends VariableDeclareContext {
		public TerminalNode Number() { return getToken(KodoGrammarParser.Number, 0); }
		public TerminalNode Variable() { return getToken(KodoGrammarParser.Variable, 0); }
		public NumvariableContext(VariableDeclareContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterNumvariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitNumvariable(this);
		}
	}

	public final VariableDeclareContext variableDeclare() throws RecognitionException {
		VariableDeclareContext _localctx = new VariableDeclareContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclare);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Number:
				_localctx = new NumvariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				match(Number);
				setState(54);
				match(Variable);
				}
				break;
			case Binary:
				_localctx = new BinvariableContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				match(Binary);
				setState(56);
				match(Variable);
				}
				break;
			case String:
				_localctx = new StrvariableContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				match(String);
				setState(58);
				match(Variable);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileblockstatementContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(KodoGrammarParser.While, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode End() { return getToken(KodoGrammarParser.End, 0); }
		public WhileblockstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileblockstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterWhileblockstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitWhileblockstatement(this);
		}
	}

	public final WhileblockstatementContext whileblockstatement() throws RecognitionException {
		WhileblockstatementContext _localctx = new WhileblockstatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whileblockstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(While);
			setState(62);
			expr(0);
			setState(63);
			program();
			setState(64);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfblockstatementContext extends ParserRuleContext {
		public IfstatementContext ifstatement() {
			return getRuleContext(IfstatementContext.class,0);
		}
		public ElsestatementContext elsestatement() {
			return getRuleContext(ElsestatementContext.class,0);
		}
		public TerminalNode End() { return getToken(KodoGrammarParser.End, 0); }
		public List<ElseifstatementContext> elseifstatement() {
			return getRuleContexts(ElseifstatementContext.class);
		}
		public ElseifstatementContext elseifstatement(int i) {
			return getRuleContext(ElseifstatementContext.class,i);
		}
		public IfblockstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifblockstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterIfblockstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitIfblockstatement(this);
		}
	}

	public final IfblockstatementContext ifblockstatement() throws RecognitionException {
		IfblockstatementContext _localctx = new IfblockstatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifblockstatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			ifstatement();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Elseif) {
				{
				{
				setState(67);
				elseifstatement();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			elsestatement();
			setState(74);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseifstatementContext extends ParserRuleContext {
		public TerminalNode Elseif() { return getToken(KodoGrammarParser.Elseif, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ElseifstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseifstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterElseifstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitElseifstatement(this);
		}
	}

	public final ElseifstatementContext elseifstatement() throws RecognitionException {
		ElseifstatementContext _localctx = new ElseifstatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_elseifstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(Elseif);
			setState(77);
			expr(0);
			setState(78);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsestatementContext extends ParserRuleContext {
		public TerminalNode Else() { return getToken(KodoGrammarParser.Else, 0); }
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ElsestatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsestatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterElsestatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitElsestatement(this);
		}
	}

	public final ElsestatementContext elsestatement() throws RecognitionException {
		ElsestatementContext _localctx = new ElsestatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elsestatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(Else);
			setState(81);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstatementContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(KodoGrammarParser.If, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public IfstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterIfstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitIfstatement(this);
		}
	}

	public final IfstatementContext ifstatement() throws RecognitionException {
		IfstatementContext _localctx = new IfstatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(If);
			setState(84);
			expr(0);
			setState(85);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LtexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode LessThan() { return getToken(KodoGrammarParser.LessThan, 0); }
		public LtexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterLtexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitLtexpr(this);
		}
	}
	public static class LteexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode LTEqual() { return getToken(KodoGrammarParser.LTEqual, 0); }
		public LteexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterLteexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitLteexpr(this);
		}
	}
	public static class EqexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Equal() { return getToken(KodoGrammarParser.Equal, 0); }
		public EqexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterEqexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitEqexpr(this);
		}
	}
	public static class NeqexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode NEqual() { return getToken(KodoGrammarParser.NEqual, 0); }
		public NeqexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterNeqexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitNeqexpr(this);
		}
	}
	public static class NotexprContext extends ExprContext {
		public TerminalNode Not() { return getToken(KodoGrammarParser.Not, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NotexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterNotexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitNotexpr(this);
		}
	}
	public static class VarexprContext extends ExprContext {
		public TerminalNode Variable() { return getToken(KodoGrammarParser.Variable, 0); }
		public VarexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterVarexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitVarexpr(this);
		}
	}
	public static class AddexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Addition() { return getToken(KodoGrammarParser.Addition, 0); }
		public AddexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterAddexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitAddexpr(this);
		}
	}
	public static class DivexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Division() { return getToken(KodoGrammarParser.Division, 0); }
		public DivexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterDivexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitDivexpr(this);
		}
	}
	public static class AndexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode And() { return getToken(KodoGrammarParser.And, 0); }
		public AndexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterAndexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitAndexpr(this);
		}
	}
	public static class IntexprContext extends ExprContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public IntexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterIntexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitIntexpr(this);
		}
	}
	public static class StrexprContext extends ExprContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public StrexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterStrexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitStrexpr(this);
		}
	}
	public static class OrpexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Or() { return getToken(KodoGrammarParser.Or, 0); }
		public OrpexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).enterOrpexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KodoGrammarListener ) ((KodoGrammarListener)listener).exitOrpexpr(this);
		}
	}
	public static class ModexprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Modulus() { return getToken(KodoGrammarParser.Modulus, 0); }
		public ModexprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
